--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
     <div class="page-body">
       <span class="js-widget-page d-none"></span>
-      
+
       <section id="about" class="home-section wg-about  ">
         <div class="home-section-bg "></div>
         <div class="container">
@@ -159,11 +159,11 @@
               <div id="profile">
                 <img class="avatar avatar-circle" width="270" height="270" src="/authors/admin/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_270x270_fill_q75_lanczos_center.jpg" alt="Nelson Bighetti">
                 <div class="portrait-title">
-                  <h2>Nelson Bighetti</h2>
-                  <h3>Professor of Artificial Intelligence</h3>
+                  <h2>Chinmoy Deka</h2>
+                  <h3>Researcher</h3>
                   <h3>
                     <a href="https://www.stanford.edu/" target="_blank" rel="noopener">
-                      <span>Stanford University</span>
+                      <span>IIT Guwahati</span>
                     </a>
                   </h3>
                 </div>
