--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@
                   <div class="section-subheading">Interests</div>
                   <ul class="ul-interests mb-0">
                     <li>Artificial Intelligence</li>
-                    <li>Computational Linguistics</li>
-                    <li>Information Retrieval</li>
+                    <li>Human-Centered AI</li>
+                    <li>Human-Computer Interaction</li>
+                    <li>Natural Language Processing</li>
                   </ul>
                 </div>
                 <div class="col-md-7">
@@ -220,22 +221,22 @@
                     <li>
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <div class="description">
-                        <p class="course">PhD in Artificial Intelligence, 2012</p>
-                        <p class="institution">Stanford University</p>
+                        <p class="course">PhD in Human-Computer Interaction (Pursuing), 2025</p>
+                        <p class="institution">Indian Institute of Technology Guwahati</p>
                       </div>
                     </li>
                     <li>
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <div class="description">
-                        <p class="course">MEng in Artificial Intelligence, 2009</p>
-                        <p class="institution">Massachusetts Institute of Technology</p>
+                        <p class="course">M.Tech in Information Technology, 2020</p>
+                        <p class="institution">Tezpur University</p>
                       </div>
                     </li>
                     <li>
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <div class="description">
-                        <p class="course">BSc in Artificial Intelligence, 2008</p>
-                        <p class="institution">Massachusetts Institute of Technology</p>
+                        <p class="course">B.Tech Computer Science & Engineering, 2015</p>
+                        <p class="institution">JNTU, Kakinada</p>
                       </div>
                     </li>
                   </ul>
