--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
             <div class="col-12 col-lg-8">
               <h1>Biography</h1>
               <div class="article-style">
-                <p>Nelson Bighetti is a professor of artificial intelligence at the Stanford AI Lab. His research interests include distributed robotics, mobile computing and programmable matter. He leads the Robotic Neurobiology group, which develops self-reconfiguring robots, systems of self-organizing robots, and mobile sensor networks.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.</p>
+                <p>Chinmoy Deka is a Research Scholar at the Department of Design, Indian Institute of Technology, Guwahati. His primary research focus is on Human-Centered AI, Explainable AI, and Conversational AI. He has a Bachelor's and Masters's degree in Computer Science and Engineering and was a recipient of the MHRD GATE scholarship of India. With over a decade of experience in programming for both academia and industry, Chinmoy has a unique skillset for rapid prototyping in different software platforms. When not absorbed working in the research lab, Chinmoy loves playing guitar, enjoys cooking for family ad friends, and otherwise spends far too much time watching movies and visualizing making one.
+
+                </p>
                 <p>
                   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/demo_resume.pdf" target="_blank">resumé</a>.
                 </p>
