--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="row">
             <div class="col-12 col-lg-4">
               <div id="profile">
-                <img class="avatar avatar-circle" width="270" height="270" src="/authors/admin/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_270x270_fill_q75_lanczos_center.jpg" alt="Nelson Bighetti">
+                <img class="avatar avatar-circle" width="270" height="270" src="/authors/admin/profile_pic.jpg" alt="Chinmoy Deka">
                 <div class="portrait-title">
                   <h2>Chinmoy Deka</h2>
                   <h3>Researcher</h3>
@@ -199,7 +199,10 @@
             <div class="col-12 col-lg-8">
               <h1>Biography</h1>
               <div class="article-style">
-                <p>Chinmoy Deka is a Research Scholar at the Department of Design, Indian Institute of Technology, Guwahati. His primary research focus is on Human-Centered AI, Explainable AI, and Conversational AI. He has a Bachelor's and Masters's degree in Computer Science and Engineering and was a recipient of the MHRD GATE scholarship of India. With over a decade of experience in programming for both academia and industry, Chinmoy has a unique skillset for rapid prototyping in different software platforms. When not absorbed working in the research lab, Chinmoy loves playing guitar, enjoys cooking for family ad friends, and otherwise spends far too much time watching movies and visualizing making one.
+                <p> Chinmoy Deka is a Research Scholar at the Department of Design, Indian Institute of Technology, Guwahati. His primary research focus is on Human-Centered AI, Explainable AI, and Conversational AI.
+                  He has a Bachelor's and Masters's degree in Computer Science and Engineering and was a recipient of the MHRD GATE scholarship of India.
+                  With over a decade of experience in programming for both academia and industry, Chinmoy has a unique skillset for rapid prototyping in different software platforms.
+                  When not absorbed working in the research lab, Chinmoy loves playing guitar, enjoys cooking for family and friends, and otherwise spends far too much time watching movies and visualizing making one.
 
                 </p>
                 <p>
