--- a/index.html
+++ b/index.html
@@ -174,22 +174,22 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://twitter.com/GeorgeCushen" target="_blank" rel="noopener" aria-label="twitter">
+                    <a href="https://twitter.com/CHINMOY10016125" target="_blank" rel="noopener" aria-label="twitter">
                       <i class="fab fa-twitter big-icon"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ" target="_blank" rel="noopener" aria-label="graduation-cap">
+                    <a href="https://scholar.google.com/citations?user=-BM6YbkAAAAJ&hl=en" target="_blank" rel="noopener" aria-label="graduation-cap">
                       <i class="fas fa-graduation-cap big-icon"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="https://github.com/gcushen" target="_blank" rel="noopener" aria-label="github">
+                    <a href="https://github.com/chinmoydeka07" target="_blank" rel="noopener" aria-label="github">
                       <i class="fab fa-github big-icon"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="linkedin">
+                    <a href="www.linkedin.com/in/chinmoy-deka-9353b6242/" target="_blank" rel="noopener" aria-label="linkedin">
                       <i class="fab fa-linkedin big-icon"></i>
                     </a>
                   </li>
@@ -250,7 +250,8 @@
           </div>
         </div>
       </section>
-      <section id="skills" class="home-section wg-featurette  ">
+
+      <!-- <section id="skills" class="home-section wg-featurette  ">
         <div class="home-section-bg "></div>
         <div class="container">
           <div class="row featurette">
@@ -439,7 +440,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
+
+      
       <section id="posts" class="home-section wg-pages  ">
         <div class="home-section-bg "></div>
         <div class="container">
