--- a/index.html
+++ b/index.html
@@ -225,21 +225,21 @@
                     <li>
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <div class="description">
-                        <p class="course">PhD in Human-Computer Interaction (Pursuing), 2025</p>
+                        <p class="course">PhD (HCI) (Pursuing), 2025</p>
                         <p class="institution">Indian Institute of Technology Guwahati</p>
                       </div>
                     </li>
                     <li>
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <div class="description">
-                        <p class="course">M.Tech in Information Technology, 2020</p>
+                        <p class="course">M.Tech (CSE), 2020</p>
                         <p class="institution">Tezpur University</p>
                       </div>
                     </li>
                     <li>
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <div class="description">
-                        <p class="course">B.Tech Computer Science & Engineering, 2015</p>
+                        <p class="course">B.Tech (CSE), 2015</p>
                         <p class="institution">JNTU, Kakinada</p>
                       </div>
                     </li>
@@ -442,7 +442,7 @@
         </div>
       </section> -->
 
-      
+
       <section id="posts" class="home-section wg-pages  ">
         <div class="home-section-bg "></div>
         <div class="container">
