--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Academic" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <link rel="icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png" />
+    <link rel="icon" type="image" href="/authors/admin/profile_pic.jpg" />
     <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_180x180_fill_lanczos_center_3.png" />
     <link rel="canonical" href="https://chinmoydeka07.github.io/" />
     <meta property="twitter:card" content="summary" />
