--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <li>
                       <i class="fa-li fas fa-graduation-cap"></i>
                       <div class="description">
-                        <p class="course">PhD (HCI) (Pursuing), 2025</p>
+                        <p class="course">PhD in Human-Computer Interaction (Pursuing), 2025</p>
                         <p class="institution">Indian Institute of Technology Guwahati</p>
                       </div>
                     </li>
